--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,16 +1,31 @@
 version: 1.0
-runtime: python3
-build:
-  commands:
+
+services:
+  - name: marketing-simulator
+    # Use App Runner’s built-in Python 3.10 support
+    runtime: python3
+    runtime-version: 3.10
+
+    # Build phase — install your deps
     build:
-      - python -m venv venv
-      - source venv/bin/activate
-      - pip install -r requirements.txt
-run:
-  runtime-version: 3.11
-  command: source venv/bin/activate && fastmcp run main.py:mcp --transport sse --host 0.0.0.0 --port 8000
-  network:
-    port: 8000
-  env:
-    - name: PYTHONUNBUFFERED
-      value: "1"
+      commands:
+        - pip install --no-cache-dir -r requirements.txt
+
+    # Run phase — spin up your FastMCP SSE server
+    run:
+      command: >
+        fastmcp run main.py:mcp
+          --transport sse
+          --host 0.0.0.0
+          --port $PORT
+      # Expose the container port that App Runner will route to
+      network:
+        port: $PORT
+
+      # Environment — $PORT is automatically set by App Runner,
+      # but explicitly binding FASTMCP_PORT can also help
+      env:
+        - name: PYTHONUNBUFFERED
+          value: "1"
+        - name: FASTMCP_PORT
+          value: "$PORT"
