--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -2,30 +2,27 @@ version: 1.0
 
 services:
   - name: marketing-simulator
-    # Use App Runner’s built-in Python 3.10 support
     runtime: python3
     runtime-version: 3.10
 
-    # Build phase — install your deps
     build:
+      # Just install your deps—no venv or activate needed
       commands:
         - pip install --no-cache-dir -r requirements.txt
 
-    # Run phase — spin up your FastMCP SSE server
     run:
+      # Bind your app to port 8000 explicitly
       command: >
         fastmcp run main.py:mcp
           --transport sse
           --host 0.0.0.0
-          --port $PORT
-      # Expose the container port that App Runner will route to
+          --port 8000
       network:
-        port: $PORT
+        # Must be an integer literal
+        port: 8000
 
-      # Environment — $PORT is automatically set by App Runner,
-      # but explicitly binding FASTMCP_PORT can also help
       env:
         - name: PYTHONUNBUFFERED
           value: "1"
         - name: FASTMCP_PORT
-          value: "$PORT"
+          value: "8000"
