--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ anyio==4.9.0
 asyncer==0.0.8
 asyncio==3.4.3
 attrs==25.3.0
+scikit-learn==1.4.2
 backoff==2.2.1
 cachetools==5.5.2
 certifi==2025.4.26
